services/lb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turbine-lb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels: {}
  template:
    metadata: {}
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      terminationGracePeriodSeconds: 3600
      tolerations:
        - key: "kubernetes.io/hostname"
          operator: "Equal"
          value: "server"
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
        - key: "node.cilium.io/agent-not-ready"
          operator: "Exists"
      containers:
      - name: turbine-lb
        image: ghcr.io/erebe/tcp_proxy:latest
        imagePullPolicy: Always
        args:
        - "/home/app/turbine-lb"
        - "-c"
        - "config/config.yaml"
        ports: []
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          allowPrivilegeEscalation: true
          privileged: true
        volumeMounts:
        - name: erebe-eu-tls
          mountPath: /home/app/certs.d/erebe.eu/
          readOnly: true
        - name: turbine-lb-config
          mountPath: /home/app/config/
          readOnly: true
      volumes:
      - name: erebe-eu-tls
        secret:
          secretName: erebe-eu-tls
      - name: turbine-lb-config
        configMap:
          name: turbine-lb-config
